@@ -1,3 +1,8 @@
+2005-12-16  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Some updates for KDE icons (Niko Mirthes)
+	Add stock_proxy as a link for the proxy preferences icon
+
 2005-12-15  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Add new network-wireless-encrypted icon
